# qt_live2d_demo

./: .gitignore  CMakeLists.txt  QtGLCore.cpp  QtGLCore.h  README.md  main.cpp  petdialog.cpp  petdialog.h  petdialogworker.cpp  petdialogworker.h  settingelawin.cpp  settingelawin.h
LAppLive2D/Inc/: LAppDelegate.hpp  LAppLive2DManager.hpp  LAppModel.hpp  LAppView.hpp
LAppLive2D/Src/: LAppDelegate.cpp  LAppLive2DManager.cpp  LAppView.cpp
Resources/qrc/: resources.qrc
elaWidget/: ElaMessageBar.h
